--- a/ACME_Generator/.classpath
+++ b/ACME_Generator/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="lib/freemarker.jar"/>
-	<classpathentry kind="lib" path="lib/covert.jar"/>
+	<classpathentry kind="lib" path="/Users/alireza/Documents/GMU/MobileSercurity/Tools/ACME-Generator/Executable/resources/acme_lib/covert.jar"/>
+	<classpathentry kind="lib" path="/Users/alireza/Documents/GMU/MobileSercurity/Tools/ACME-Generator/Executable/resources/acme_lib/freemarker.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
